Fixing whitespaces on the edges on mobile portrait mode

--- a/client/src/assets/images.css
+++ b/client/src/assets/images.css
@@ -3,5 +3,10 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50%;
+}
+
+body, html {
+  max-width: 100vw;
+  margin: 0 auto;
   overflow-x: hidden;
 }
