--- a/client/src/assets/index.css
+++ b/client/src/assets/index.css
@@ -7,8 +7,7 @@
 @tailwind utilities;
 
 html {
-  height: 100%;
-  width: 100%;
+
   font-size: 16px;
 }
 
